--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,14 @@
         <%= render 'layouts/sidebar' %>
       </div>
       <div id="main_container" class="col-md-10">
+        <% if user_signed_in?  %>
+          <div class="current_user">
+            <p>
+              <%= current_user.email %> is the current user.
+              <%= link_to 'Logout', destroy_user_session_path %>
+            </p>
+          </div>
+        <% end %>
         <div id="top_nav" class="row">
           <div id="logo" class="pull-left"></div>
 
