--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,18 +21,24 @@
     th {
         text-transform: uppercase;
         font-weight: normal;
-        padding: 10px;
+        padding: 10px 2px;
         background: #FFF;
         font-size: 10px;
         text-align: center;
         &.position {
-            width: 15%;
+            width: 10%;
         }
         &.team_name {
-            width: 20%;
+            width: 40%;
         }
-        &.points, &.players_lost {
-            width: 25%;
+        &.points {
+            width: 15%;
+        }
+        &.games {
+            width: 15%;
+        }
+        &.players_remaining {
+            width: 30%;
         }
     }
 }
@@ -40,28 +46,10 @@
 .standings_table {
     width: 100%;
     background-color: #fff;
-    th.games {
-        width: 40px;
-    }
-    td {
-        width: auto;
-        padding: 10px 2px;
-        text-align: center;
-        &.position {
-            width: 10%;
-        }
-        &.team_name {
-            width: 30%;
-        }
-        &.points {
-            width: 20%;
-        }
-        &.players_lost {
-            width: 20%;
-        }
-    }
+
     tr {
         border-bottom: 1px solid #E5E5E5;
+
         &.even {
             background-color: #EEE;
         }
@@ -70,6 +58,27 @@
         }
         &:hover {
             background-color: #FFF;
+        }
+    }
+
+    td {
+        width: auto;
+        padding: 10px 2px;
+        text-align: center;
+        &.position {
+            width: 10%;
+        }
+        &.team_name {
+            width: 40%;
+        }
+        &.points {
+            width: 15%;
+        }
+        &.games {
+            width: 15%;
+        }
+        &.players_remaining {
+            width: 30%;
         }
     }
 }
