--- a/app/views/mm_teams/rosters.html.erb
+++ b/app/views/mm_teams/rosters.html.erb
@@ -9,7 +9,7 @@
           <tr>
             <th rowspan="2" class="name">Team Name</th>
             <th rowspan="2" class="name">Name</th>
-            <th rowspan="2" class="ppg">#</th>
+            <th rowspan="2" class="ppg">Jersey #</th>
             <th rowspan="2" class="position">Position</th>
             <th rowspan="2" class="ppg">PPG.</th>
             <th rowspan="2" class="school">School</th>
