--- a/app/views/admin/bracket.html.erb
+++ b/app/views/admin/bracket.html.erb
@@ -1,4 +1,4 @@
-<div id="bracket_container">
+<div id="admin_bracket_container">
 
       <%= form_tag(bracket_update_regions_path, :method => "post") do %>
 
