--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -88,7 +88,7 @@ textarea {
     margin: 0px auto;
     height: 1000px;
     display: block;
-    background: #6A97C6;
+    background: #1C3767;
 }
 
 #login_wrapper {
@@ -124,10 +124,10 @@ textarea {
 
 #logo {
     display: block;
-    width: 210px;
-    height: 90px;
-    background: asset-url("march_madness_logo.png", image) 0 0 no-repeat;
-    margin: 30px auto;
+    width: 200px;
+    height: 200px;
+    background: asset-url("ncaa_tourney_houston_16.png", image) 0 0 no-repeat;
+    margin: 10px auto;
 }
 
 #logo_big {
@@ -246,30 +246,32 @@ textarea {
     }*/
 }
 
+#admin_container {
+    margin: 0px;
+    width: 100%;
+    height: 850px;
+}
+
 #admin_nav {
-    padding: 0px;
-    float: left;
-    span {
+    width: 430px;
         a {
             display: inline-block;
             *display: inline;
             zoom: 1;
             padding: 10px 10px;
             margin: 0px 5px 0px 5px;
-            background-color: #475B77;
+            background: image-url("bball_texture.png") 0 0 repeat;
+            color: #fff;
             text-decoration: none;
             text-transform: uppercase;
-            &:link, &:visited {
-                color: #fff;
-                text-decoration: none;
-            }
-            &:hover {
-                color: #000;
-                background-color: #A3C2DC;
-                text-decoration: none;
-            }
+            border-radius: 5px;
         }
-    }
+
+        a:hover {
+            color: #000;
+            background: image-url("bball_texture_faded.png") 0 0 repeat;
+            text-decoration: none;
+        }
 }
 
 .current_user {
@@ -282,7 +284,6 @@ textarea {
         color: #fff;
     }
     a {
-        font-size: 11px;
         text-decoration: underline;
         &:hover {
             text-decoration: none;
@@ -317,14 +318,7 @@ textarea {
     margin: 0px;
     padding: 1% 3%;
     width: 100%;
-    height: 930px;
-    overflow: auto;
-}
-
-#admin_container {
-    margin: 0px;
-    width: 100%;
-    height: 930px;
+    height: 850px;
     overflow: auto;
 }
 
@@ -601,7 +595,7 @@ html[xmlns] .clearfix {
 }
 
 #draft_order {
-    padding: 20px 40px;
+    padding: 0px;
 }
 
 .no-margin {
