--- a/app/assets/stylesheets/ncaa_teams.css.scss
+++ b/app/assets/stylesheets/ncaa_teams.css.scss
@@ -1,3 +1,9 @@
+#ncaa_teams_container {
+    margin: 0px;
+    height: 720px;
+    overflow: auto;
+}
+
 .teams_table {
     display: block;
     width: 100%;
