small css change

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -46,6 +46,7 @@
 .standings_table {
     width: 100%;
     background-color: #fff;
+    height: 720px;
 
     tr {
         border-bottom: 1px solid #E5E5E5;
