Look and feel changes

--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -328,6 +328,13 @@ textarea {
     padding: 5px 5px 15px;
 }
 
+.user_profile_container {
+    height: 850px;
+    background: #f9f9f9;
+    margin: 0;
+    padding: 20px 20px;
+}
+
 #notice {
     padding: 5px 5px 6px 5px;
     margin: 0px;
