Look and feel changes

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -41,7 +41,12 @@
     width: 100%;
     background-color: #fff;
     height: 720px;
-
+    display: block;
+    width: 100%;
+    tbody {
+        width: 100%;
+        display: table;
+    }
     tr {
         border-bottom: 1px solid #E5E5E5;
 
