--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -43,9 +43,15 @@ width: 15%;
 
 .draftpicks_table {
     width: 100%;
+    height: 720px;
     background-color: #fff;
     border: 0px solid;
     overflow: auto;
+    display: block;
+    tbody {
+        width: 100%;
+        display: table;
+    }
     td {
         padding: 10px 2px;
         text-align: center;
